# Scrapyard-Cpp

./: .gitignore  .gitmodules  BuildGMake.sh  CMakeLists.txt  README.md  RunProject.sh  main.cpp  premake5.lua
HelloTriangle/: HelloTriangleApplication.cpp  HelloTriangleApplication.h
Sandbox/: CMakeLists.txt  Sandbox.h
Sandbox/src/: SandboxApp.cpp  SandboxApp.h
Scrapyard/: CMakeLists.txt  Scrapyard.h  Test.cpp  Test.h
Scrapyard/libs/GLFW/: premake5.lua
Scrapyard/src/: Scrapyard.cpp  Scrapyard.h  scypch.cpp  scypch.h
Scrapyard/src/Platform/Macosx/: MacWindow.cpp  MacWindow.h  ProceduralMacWindow.cpp  ProceduralMacWindow.h
Scrapyard/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Scrapyard/src/Scrapyard/: Application.cpp  Application.h  Core.h  Entrypoint.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Window.h
Scrapyard/src/Scrapyard/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
